# snakeengine-driver

./: LICENSE  README.md  deploy.sh  sign-module.sh
.github/workflows/: ci.yml  release.yml
dkms/: dkms.conf
kernel/: Makefile  snakedrv_backend.h  snakedrv_backend_process.c  snakedrv_benchmark.h  snakedrv_bloom.h  snakedrv_injector.c  snakedrv_injector.h  snakedrv_main.c  snakedrv_memory.h  snakedrv_optimize.h  snakedrv_scanner.c  snakedrv_scanner.h
security/: 99-snakedrv.rules  snakeengine.apparmor  snakeengine.fc  snakeengine.pp  snakeengine.te
security/tmp/: all_interfaces.conf  snakeengine.tmp
userland/: CMakeLists.txt  Makefile
userland/include/: libsnakedrv.hpp  libsnakedrv_scanner.hpp  snakedrv.h  snakedrv_elf.hpp  snakedrv_scanner.h
userland/src/: libsnakedrv.cpp  libsnakedrv_scanner.cpp  snakedrv_injector.cpp
